--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/pohy/lights/issues"
   },
-  "homepage": "https://github.com/pohy/lights#readme"
+  "homepage": "https://github.com/pohy/lights#readme",
+  "dependencies": {
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "express": "^4.13.3",
+    "nodemon": "^1.8.1",
+    "onoff": "^1.0.3"
+  }
 }
