--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^4.13.3",
     "nodemon": "^1.8.1",
     "onoff": "^1.0.3"
+  },
+  "scripts": {
+	  "start": "node_modules/.bin/nodemon index.js"
   }
 }
